WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37542
[WML] Duplicated patches were pushed
https://bugs.webkit.org/show_bug.cgi?id=37542
Summary
[WML] Duplicated patches were pushed
Gyuyoung Kim
Reported
2010-04-13 19:04:18 PDT
Duplicated patches were pushed to same files (wml/WMLOptionElement.h, wml/WMLSelectElement.h) -
Bug 36698
- There are build breaks when wml is enabled. -
Bug 36648
- [WML] WML enabled build failure. I think one of them should be reverted. There are build breaks when wml enabled as below, ------------------------------------------------------------------------------------------------------ In file included from WebCore/dom/SelectElement.cpp:48: ./WebCore/wml/WMLSelectElement.h:92: error: 'virtual void WebCore::WMLSelectElement::listBoxSelectItem(int, bool, bool, bool)' cannot be overloaded ./WebCore/wml/WMLSelectElement.h:90: error: with 'virtual void WebCore::WMLSelectElement::listBoxSelectItem(int, bool, bool, bool)' In file included from WebCore/dom/OptionElement.cpp:34: ./WebCore/wml/WMLOptionElement.h:59: error: 'virtual bool WebCore::WMLOptionElement::disabled() const' cannot be overloaded ./WebCore/wml/WMLOptionElement.h:44: error: with 'virtual bool WebCore::WMLOptionElement::disabled() const' -------------------------------------------------------------------------------------------------------------
Attachments
Fix build break
(2.87 KB, patch)
2010-04-14 22:10 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch for wml build break
(1.78 KB, patch)
2010-04-14 22:46 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2010-04-14 17:56:46 PDT
Feel free to post a patch. :)
Gyuyoung Kim
Comment 2
2010-04-14 22:10:38 PDT
Created
attachment 53409
[details]
Fix build break I attach a patch for this build fail. Thanks.
Eric Seidel (no email)
Comment 3
2010-04-14 22:36:27 PDT
Comment on
attachment 53409
[details]
Fix build break Are the current dummy implementations in the header the right ones? Do they need FIXMEs next to them?
Gyuyoung Kim
Comment 4
2010-04-14 22:46:29 PDT
Created
attachment 53410
[details]
Patch for wml build break I think so. I remove the dumy functions implemented in header file.
Eric Seidel (no email)
Comment 5
2010-04-14 22:50:46 PDT
Comment on
attachment 53410
[details]
Patch for wml build break OK.
WebKit Commit Bot
Comment 6
2010-04-15 03:51:37 PDT
Comment on
attachment 53410
[details]
Patch for wml build break Rejecting patch 53410 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 12683 test cases. fast/canvas/webgl/index-validation.html -> failed Exiting early after 1 failures. 5085 tests run. 85.28s total testing time 5084 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 1 test case (<1%) had stderr output Full output:
http://webkit-commit-queue.appspot.com/results/1722046
Gyuyoung Kim
Comment 7
2010-04-15 04:14:08 PDT
Hmm, I don't know why this patch makes test fail. If you know the reason, could you tell me the reason ?
Eric Seidel (no email)
Comment 8
2010-04-15 04:36:49 PDT
It's not your fault, it's a flaky test.
WebKit Commit Bot
Comment 9
2010-04-15 04:51:30 PDT
Comment on
attachment 53410
[details]
Patch for wml build break Clearing flags on attachment: 53410 Committed
r57639
: <
http://trac.webkit.org/changeset/57639
>
WebKit Commit Bot
Comment 10
2010-04-15 04:51:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug