2010-04-15  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Reviewed by Eric Seidel.

        Duplicated patches related to wml were pushed to trunk. So, one of
        the patches should be reverted.
        https://bugs.webkit.org/show_bug.cgi?id=37542

        * wml/WMLOptionElement.h:
        * wml/WMLSelectElement.h:

Canonical link: https://commits.webkit.org/48926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57639 268f45cc-cd09-0410-ab3c-d52691b4dbfc