WebCore/wml/WMLSelectElement.h
@@ -88,8 +88,6 @@ public:
     bool initialized() const { return m_initialized; }
     
     virtual void listBoxSelectItem(int listIndex, bool allowMultiplySelections, bool shift, bool fireOnChangeNow = true);
-
-    virtual void listBoxSelectItem(int listIndex, bool allowMultiplySelections, bool shift, bool fireOnChangeNow = true) { return; }
 private:
     virtual void insertedIntoTree(bool);
 
